# brick-breaker-zhishi

./: AI_report_week4.md  AI_report_week6.md  AI_report_week8.md  CMakeLists.txt  DESIGN.md  DESIGN_week7.md  README.md  breakout_week2  config.json  game  performance_optimization.md
src/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Game.cpp  Game.h  GameState.cpp  GameState.h  NetworkManager.cpp  NetworkManager.h  NetworkMessages.h  Paddle.cpp  Paddle.h  PowerUp.cpp  PowerUp.h  main.cpp
tests/: test_collision  test_collision.cpp
